--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.14.1",
     "react-icons": "^4.1.0",
+    "react-slick": "^0.27.14",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.2"
   }
 }
